<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g_4" >

    <TextView
        android:id="@+id/inputtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/inputchar" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputtv"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/typechoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/typechoice" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/typechoice"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:prompt="@string/spinner_title"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/speedtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/speed" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speedtv"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/speedtv"
        android:max="20"
        android:progress="18" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="@dimen/padding_medium"
        android:text="@string/preview"
        android:textSize="40sp"
        tools:context=".TextAM_MainActivity" />

    <LinearLayout
        android:id="@+id/btlist1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/colorpickerbutton"
            android:textColor="#FFFFFF"
            android:layout_marginRight="5dp"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/bcolorpickerbutton"
            android:textColor="#FFFFFF"
           	android:layout_marginLeft="5dp"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btlist1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/start_bt"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/admoblayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
    </RelativeLayout>

</RelativeLayout>