<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5ebcb" >

    <Button
        android:id="@+id/signalcolorbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button"
        android:text="@string/signalcolortitle"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/animationsbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signalcolorbt"
        android:layout_alignLeft="@+id/signalcolorbt"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button"
        android:text="@string/animationtitle"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/huabanbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signalcolorbt"
        android:layout_below="@+id/signalcolorbt"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/huabantitle"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/rmadbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/huabanbt"
        android:layout_below="@+id/huabanbt"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/flashlamp"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/admoblayout0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
    </RelativeLayout>

</RelativeLayout>